style(junior): add top margin on mission page to avoid cropped robot

--- a/junior/app/styles/pages/identified/missions/mission.scss
+++ b/junior/app/styles/pages/identified/missions/mission.scss
@@ -1,4 +1,6 @@
 .mission-page {
+  margin-top: 20px;
+
   &__body {
     display: flex;
     margin-top: 16px;
